The layout markup has been adjusted to ensure that when only 12 movies are displayed on the page, the length of the sidebar matches the movie block. Furthermore, a condition has been implemented to render pagination buttons only if the total number of pages exceeds one. Additionally, the length of the text displayed in the sorting information block has been recalibrated to prevent overflow in cases where the user enters a query in the search field and additional sorting by rating is applied.

--- a/src/Components/UI/BigMovieCard/BigMovieCard.css
+++ b/src/Components/UI/BigMovieCard/BigMovieCard.css
@@ -1,7 +1,6 @@
 .ml-big {
   width: 212px;
   height: 357px;
-  margin: 2px;
   font-size: 13px;
   display: inline-block;
   text-decoration: none;
