--- a/src/Components/UI/MainMoviesBlock/MainMoviesBlock.css
+++ b/src/Components/UI/MainMoviesBlock/MainMoviesBlock.css
@@ -1,4 +1,8 @@
 .main-movies-block {
-  margin-left: 4px;
-  width: 650px;
+  margin: 2px 6px 0;
+  min-height: 1409px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 357px;
+  gap: 4px;
 }
