--- a/src/Components/UI/NoResultsFound/NoResultsFound.css
+++ b/src/Components/UI/NoResultsFound/NoResultsFound.css
@@ -1,5 +1,5 @@
 .search-info {
-  margin: 3px 6px;
+  margin: 2px 6px;
   padding: 10px;
   font-size: 16px;
   text-align: center;
