--- a/src/Components/UI/PageNavigationButtons/PageNavigationButtons.css
+++ b/src/Components/UI/PageNavigationButtons/PageNavigationButtons.css
@@ -1,5 +1,5 @@
 .page-navigation-buttons {
-  margin-left: 6px;
+  margin: 6px 6px 0;
   width: 644px;
   display: flex;
   justify-content: center;
