--- a/src/Components/UI/PrimarySideBar/PrimarySideBar.css
+++ b/src/Components/UI/PrimarySideBar/PrimarySideBar.css
@@ -1,7 +1,6 @@
 .side-bar {
   margin: 2px 6px 0 0;
   width: 298px;
-  height: 1531px;
   background: var(--bg-sb);
 }
 
