--- a/src/Pages/Homepage/Homepage.css
+++ b/src/Pages/Homepage/Homepage.css
@@ -1,7 +1,7 @@
 .homepage {
   display: grid;
   grid-template-columns: 1fr 304px;
-  grid-template-rows: 100px 216px 95px 51px 1451px 31px 49px;
+  grid-template-rows: 100px 216px 95px 51px;
   grid-template-areas:
     "header header"
     "top-movies top-movies"
@@ -34,7 +34,7 @@
 
 .page-navigation-buttons {
   grid-area: page-nav-buttons;
-  align-self: start;
+  align-self: end;
 }
 
 .side-bar {
